# energy_informatics

./: CMakeLists.txt
data/event detection/: callgrind.out.4224  callgrind.out.4239  callgrind.out.4256  callgrind.out.4263
dataloader/: CMakeLists.txt  data_loader_config.h.in
dataloader/include/: file_loader.h
dataloader/src/: analyze.h  detection_performance_evaluation.c  file_config_loader.c  file_config_loader.h  file_loader.c  file_loader.h  main.c  smart_meter_channels.c  smart_meter_channels.h
libanalyze/: CMakeLists.txt  libanalyze_config.h.in
libanalyze/include/: test.h  test2.h
libanalyze/src/: analyze.h  event_detection.c  event_detection.h  fft_feature.c  fft_feature.h  mean_square_root_feature.h  root_mean_square_feature.c  root_mean_square_feature.h
performanceanalysis/: CMakeLists.txt  data_loader_config.h.in  performance_analysis_config.h.in
performanceanalysis/src/: detection_performance_evaluation.c  detection_performance_evaluation.h  file_config_loader.c  file_loader.c  file_loader.h  main.c  save_data.c  save_data.h  smart_meter_channels.c  smart_meter_channels.h  timing.h
research/results/: README.txt
research/results/raspberry/: run_perf.sh
research/results/raspberry/all_features/: accum.txt  gmon.out.26288  gmon.out.26288.text  gmon.out.37146  gmon.out.37146.text  gmon.out.38654  gmon.out.38654.text  gmon.out.57181  gmon.out.57181.text  gmon.out.9759  gmon.out.9759.text
research/results/raspberry/no_features/: accum.txt  gmon.out.14963  gmon.out.14963.text  gmon.out.21259  gmon.out.21259.text  gmon.out.28220  gmon.out.28220.text  gmon.out.47868  gmon.out.47868.text  gmon.out.9301  gmon.out.9301.text
research/results/raspberry/normal_out/: accum.txt  gmon.out.26922  gmon.out.26922.text  gmon.out.37107  gmon.out.37107.text  gmon.out.40486  gmon.out.40486.text  gmon.out.56996  gmon.out.56996.text  gmon.out.9604  gmon.out.9604.text
research/results/x86/all_features/: callgrind.out.1845  callgrind.out.1975  callgrind.out.2167  callgrind.out.2206  callgrind.out.2302
research/results/x86/no_features/: callgrind.out.4229
research/scripts/: plot_event.sh  run_all_analysis.sh  run_performance_analysis.sh
scripts/: plot_event.sh  plot_fft.sh  plot_rms.sh
